alert con sweet alert

--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
         </div>
     </div>
 </body>
-<script defer src="script.js"></script>                
+<script defer src="script.js"></script> 
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>               
 </html>
