creacion json y correcion de errores

--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     </div>
 </body>
 <script defer src="script.js"></script> 
+<script src="preguntas.json"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>               
 </html>
